@@ -1,3 +1,6 @@
+2015-05-31
+	Added multi-item case selection
+
 2015-01-25
 	Added timer func support
 	Improved syntax error messages
